--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <!--<item
         android:id="@+id/stopwatchFragment"
         android:title="@string/fragment_stopwatch"
@@ -11,4 +12,9 @@
         android:title="@string/fragment_settings"
         app:showAsAction="always"
         android:icon="@drawable/settings" />
+
+    <item
+        android:id="@+id/ceskyLakrosMenuItem"
+        android:title="@string/ceskyLakrosMenuItem"
+        app:showAsAction="never" />
 </menu>
