--- a/app/src/main/res/layout/view_stopwatch_vertical.xml
+++ b/app/src/main/res/layout/view_stopwatch_vertical.xml
@@ -22,6 +22,7 @@
         android:text="@string/stopwatchView_default" />
 
     <LinearLayout
+        android:id="@+id/buttonsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
